kubernetes/ingress/app-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: backend-ingress
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: test-kubernetes.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 5000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test-kubernetes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-reverse-proxy-service # Apunta al Service de NGINX
                port:
                  number: 80
